--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "greenville_population = greenvi # change None\n",
+    "greenville_population = dict.get # change None\n",
     "greenville_population # 84554"
    ]
   },
