--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,7 @@
    },
    "outputs": [],
    "source": [
-    "city_keys = None\n",
+    "city_keys = list(green)\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
