--- a/index.ipynb
+++ b/index.ipynb
@@ -180,7 +180,7 @@
    },
    "outputs": [],
    "source": [
-    "city_values = list(greenvi)\n",
+    "city_values = list(greenville.)\n",
     "city_values # [68, 'Greenville', 'USA', 84554]"
    ]
   },
