--- a/index.ipynb
+++ b/index.ipynb
@@ -322,20 +322,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-12-236064ec8c66>, line 1)",
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-236064ec8c66>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    salina = cities{2}\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-c93cc4fd8543>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msalina\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcities\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msalina\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
      ]
     }
    ],
    "source": [
-    "salina = cities{2} \n",
+    "salina = cities\n",
     "salina\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
    ]
