--- a/index.ipynb
+++ b/index.ipynb
@@ -357,7 +357,7 @@
    },
    "outputs": [],
    "source": [
-    "los_cabos_pop = cities[3]\n",
+    "los_cabos_pop = cities[3]cities[3]\n",
     "los_cabos_pop # 287651"
    ]
   },
