automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -425,7 +425,7 @@
     }
    ],
    "source": [
-    "replace.cities[11]['City'] # 'PyeongChang'"
+    "cities[11]['City'] # 'PyeongChang'"
    ]
   },
   {
