--- a/index.ipynb
+++ b/index.ipynb
@@ -409,11 +409,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PyeongChang'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cities[11]['City'] = 'PyeongChang' # 'PyeongChang'"
+    "cities[11]['City'] = 'PyeongChang' # 'PyeongChang'\n",
+    "cities[11]['City']"
    ]
   },
   {
