--- a/index.ipynb
+++ b/index.ipynb
@@ -409,23 +409,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'PyeongChang'"
+       "{'City': 'PyeongChang',\n",
+       " 'Country': 'South Korea',\n",
+       " 'Population': 2581000,\n",
+       " 'Area': 3194}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[11]['City'] = 'PyeongChang' # 'PyeongChang'\n",
-    "cities[11]['City']"
+    "\n",
+    "cities[11]"
    ]
   },
   {
