--- a/index.ipynb
+++ b/index.ipynb
@@ -409,26 +409,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'PyeongChang',\n",
-       " 'Country': 'South Korea',\n",
-       " 'Population': 2581000,\n",
-       " 'Area': 3194}"
+       "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "cities[11]"
+    "pyeongchang_values"
    ]
   },
   {
