--- a/index.ipynb
+++ b/index.ipynb
@@ -453,7 +453,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = list(cities[11]).values\n",
+    "pyeongchang_values = values.cit\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
